--- a/gradle.properties
+++ b/gradle.properties
@@ -24,22 +24,27 @@ neo_version_range=[21.1.0,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
+ars_version=5.6.0.1015
+gecko_version=4.7.5.1
+jade_id=6291517
+terrablender_version=4.1.0.8
+curios_version=9.3.1
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
+mod_id=arsnumerichud
 # The human-readable display name for the mod.
-mod_name=Example Mod
+mod_name=Ars NumericHUD
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
+mod_group_id=com.wfphantom.arsnumerichud
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=WFPhantom
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=Adds numbers to your mana bar and mana use tooltips on glyphs.
